Commit; Con fab para añadir nota ya sea foto o video, marker para cada una de las notas,activity para mandar las notas, falta por arreglar unas cosas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ProjectMap</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_add">Add</string>
+    <string name="title_activity_anadir_nota">AnadirNota</string>
+    <string name="action_settings">Settings</string>
 </resources>
