--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_add">Add</string>
     <string name="title_activity_anadir_nota">AnadirNota</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detalles_nota">detallesNota</string>
 </resources>
